--- a/css/main.css
+++ b/css/main.css
@@ -10,6 +10,11 @@ list-style:none;
 font-weight: bold;
 
 }
+
+nav ul li, footer ul li {
+    display: inline;
+    margin-right: 20px;
+}
 a {
     text-decoration: none;
     color: #999;
@@ -42,4 +47,3 @@ ul.posts {
 ul.posts li {
     list-style: none;
 }
-c
